[package]
name = "agentic-uat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Story 1: UAT writes `uat_signings` rows and reads stories through the
# `Store` trait. ADR-0002 pins schemaless document writes through this
# crate; we never touch a DB backend directly.
agentic-store = { path = "../agentic-store" }

# Story 1: the library loads `stories/<id>.yml` through the real
# `StoryLoader` so the parse shape is shared with every other consumer
# and UnknownStory is a typed outcome of the same path story 6 defined.
agentic-story = { path = "../agentic-story" }

# Story 18: canonical signer resolution — resolves identity from the
# four-tier chain (flag → env → git config → error). Story 18 consolidates
# the resolver into agentic-signer so it can be shared across agentic-uat,
# agentic-ci-record, and agentic-runtime without circular dependencies.
agentic-signer = { path = "../agentic-signer" }

# Story 1: `commit` on a `uat_signings` row is the full SHA of HEAD at
# signing time; the fail-closed-on-dirty-tree gate is also a `git2`
# `statuses()` query. Same pin as `agentic-ci-record` (story 2).
git2 = { version = "0.19", default-features = false }

# Story 1: signing rows are schemaless JSON documents handed to
# `Store::append`; matches the shape every other store consumer uses.
serde_json.workspace = true

# Story 1: the promotion rewrite parses `stories/<id>.yml` through
# `serde_yaml` to locate the `status:` line; the library writes back a
# surgical line-level edit to preserve every other field (block scalars,
# comments, key order) as the story's promotion contract requires.
serde_yaml.workspace = true

# Story 1: each signing row carries a time-sortable `id`. UUIDv7 is the
# simplest way to get one without pulling a separate ULID crate; the
# `v7` feature enables the timestamp-based variant. `std` is the
# default RNG source for `Uuid::now_v7()`.
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
# Story 1: integration tests drive the `Uat` library directly against an
# in-memory `Store` to avoid a real DB. `MemStore` is the canonical test
# fixture for `agentic-store` consumers (see crates/agentic-store/tests/*.rs).
agentic-store = { path = "../agentic-store" }

# Story 1: tests load story fixtures through the real `StoryLoader` so the
# scaffolds exercise the same parse path the library will — no bespoke
# story-YAML parsing in the tests themselves.
agentic-story = { path = "../agentic-story" }

# Story 1: `uat_signings` rows are read back from the in-memory store as
# `serde_json::Value`; tests assert the exact field shape named in the
# story's guidance (`id`, `story_id`, `verdict`, `commit`, `signed_at`).
serde_json.workspace = true

# Story 1: every test roots its fixture stories at a `TempDir` so the live
# `stories/` directory at repo root is never mutated. Matches the fixture
# idiom used by `agentic-story`'s own tests.
tempfile.workspace = true

# Story 1: the tests init a minimal git repo inside the `TempDir`, commit a
# seed, and (for the dirty-tree scaffold) leave an uncommitted change, so
# the fail-closed contract can be exercised without touching the real repo
# the test suite runs inside. `git2` is already the workspace choice of
# libgit2 binding (see crates/agentic-ci-record/Cargo.toml); pinned to the
# same version and with `default-features = false` for the same reason
# named there.
git2 = { version = "0.19", default-features = false }
